WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299252
REGRESSION(
299318@main
): [GStreamer][MSE] Audio playback broken on instagram
https://bugs.webkit.org/show_bug.cgi?id=299252
Summary
REGRESSION(299318@main): [GStreamer][MSE] Audio playback broken on instagram
Philippe Normand
Reported
2025-09-21 03:08:16 PDT
avdec_aac spews errors when playing stories (or reels or whatever they're called anyway) on instagram... Reverting to aacparse without adts capsfilter fixes it, but breaks Kaltura again.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2025-10-04 04:14:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51805
EWS
Comment 2
2025-10-08 08:50:57 PDT
Committed
301209@main
(4a3ebdf6bf57): <
https://commits.webkit.org/301209@main
> Reviewed commits have been landed. Closing PR #51805 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-10-08 08:51:15 PDT
<
rdar://problem/162203436
>
Radar WebKit Bug Importer
Comment 4
2025-10-08 08:51:17 PDT
<
rdar://problem/162203558
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug