REGRESSION(299318@main): [GStreamer][MSE] Audio playback broken on instagram https://bugs.webkit.org/show_bug.cgi?id=299252

Reviewed by Alicia Boya Garcia.

299318@main introduced a performance regression and also broke Instagram stories audio playback.
Instead of forcing ADTS framing we now rewrite the codec_data supplied by the demuxer only if the
underlying AAC audio_object_type was set to SBR or PS, which the avdec_aac decoder doesn't handle
very well. When any of those object types is detected, we replace it with an LC (Low Complexity)
identifier and re-use the existing sampling frequency and channels bits from the previous
codec_data. avdec_aac handles LC well and there is no noticeable rendering issue on Kaltura and
Instagram stories anymore.

Thanks to Alicia Boya Garcia <aboya@igalia.com> for her precious help during the investigation.

* Source/WebCore/platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::aacGetAudioObjectType):
(WebCore::createOptionalParserForFormat):

Canonical link: https://commits.webkit.org/301209@main